5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1577_2896.log
== TEST (2019-04-02 11:23:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = helen

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = helen
NameError: name 'helen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:24:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = "helen"

# Impressao de saidas
print(var)
-- OUTPUT:
helen
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:25:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = "helen"

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.149441
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
helen
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
helen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:26:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("helen")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:26:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("helen")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.141743
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
